--- a/app/src/main/res/layout/db_list_item.xml
+++ b/app/src/main/res/layout/db_list_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:background="?android:selectableItemBackground">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:minHeight="?android:listPreferredItemHeight"
+        android:orientation="vertical"
+        android:background="?android:selectableItemBackground">
 
-        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        <TextView
             android:id="@+id/dbName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,15 +23,13 @@
             android:gravity="center_vertical"
             />
 
-        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        <TextView
             android:id="@+id/dbVersion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:textSize="15dp"
             android:gravity="center_vertical"
             android:layout_below="@id/dbName"
-            android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
-
-    </RelativeLayout>
-
-</android.support.v7.widget.CardView>
+            />
+    </LinearLayout>
+</FrameLayout>
