--- a/app/src/main/res/layout/fragment_db_test_result_status.xml
+++ b/app/src/main/res/layout/fragment_db_test_result_status.xml
@@ -1,12 +1,19 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:scrollbars="vertical"
+    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    tools:context="com.koustuvsinha.benchmarker.views.DbTestResultStatus">
+
+
+<LinearLayout
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:orientation="vertical"
-    tools:context="com.koustuvsinha.benchmarker.views.DbTestResultStatus">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -338,5 +345,6 @@
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
 
 
