--- a/app/src/main/res/layout/db_list_item.xml
+++ b/app/src/main/res/layout/db_list_item.xml
@@ -3,33 +3,54 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
     android:clickable="true"
     android:background="?android:selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:minHeight="?android:listPreferredItemHeight"
-        android:orientation="vertical"
-        android:background="?android:selectableItemBackground">
+        android:weightSum="5"
+        >
 
-        <TextView
-            android:id="@+id/dbName"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="25dp"
-            android:gravity="center_vertical"
-            />
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/dbVersion"
-            android:layout_width="match_parent"
+            <ImageView android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:id="@+id/db_logo"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:gravity="center_vertical"
-            android:layout_below="@id/dbName"
-            />
+            android:layout_weight="4"
+            android:orientation="vertical"
+            android:layout_marginLeft="5dp">
+
+            <TextView
+                android:id="@+id/dbName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="25dp"
+                android:gravity="center_vertical"
+                />
+
+            <TextView
+                android:id="@+id/dbVersion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:gravity="center_vertical"
+                android:layout_below="@id/dbName"
+                />
+
+        </LinearLayout>
     </LinearLayout>
 </FrameLayout>
