--- a/app/src/main/res/menu/menu_base.xml
+++ b/app/src/main/res/menu/menu_base.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".BaseActivity">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:id="@+id/action_about"
+        android:title="@string/action_about"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:onClick="displayAbout"/>
 </menu>
